--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SimpleBleScanner</string>
+    <string name="app_name">SeniorDesignSensorApp</string>
     <string name="btn_start_scan_text">Start Scan</string>
     <string name="tw_scan_results_title">Scan Results</string>
     <string name="ble_permission_rationale">This app needs to access bluetooth and location in order to scan for BLE devices.</string>
